--- a/lang/commentluv-pl_PL.po
+++ b/lang/commentluv-pl_PL.po
@@ -1,193 +1,193 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: CommentLuv 2.7.5\n"
+"Project-Id-Version: CommentLuv\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-01-10 15:16-0000\n"
 "PO-Revision-Date: \n"
-"Last-Translator: Andy Bailey <admin@comluv.com>\n"
-"Language-Team: @commentluv, Gianni Diurno <admin@comluv.com>\n"
+"Last-Translator: Mariusz Kołacz <mariusz.kolacz@gmail.com>\n"
+"Language-Team: Mariusz Kołacz <m.kolacz@techformator.pl>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: English\n"
-"X-Poedit-Country: UNITED KINGDOM\n"
+"X-Poedit-Language: Polish\n"
+"X-Poedit-Country: POLAND\n"
 "X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-Basepath: .\n"
 "X-Poedit-SearchPath-0: ..\n"
 
 #: ../commentluv-manager.php:26
 msgid "This plugin takes the url from the comment form and tries to parse the feed of the site and display the last entry made. If you have any questions, comments or if you have a good idea that you would like to see in the next version of CommentLuv, please visit http://comluv.com and let me know."
-msgstr ""
+msgstr "Wtyczka pobiera adres URL strony z formularza komentarza, analizuje kanał RSS witryny i wyświetla tytuł ostatniego wpisu. Jeśli masz jakieś pytania, komentarze lub sugestie dotyczące CommentLuv, proszę poinformuj mnie o tym na stronie http://comluv.com."
 
 #: ../commentluv-manager.php:36
 msgid "Display Options"
-msgstr ""
+msgstr "Opcje wyświetlania"
 
 #: ../commentluv-manager.php:40
 msgid "Enter the text you want displayed in the comment"
-msgstr ""
+msgstr "Wprowadź tekst, który ma być wyświetlany w komentarzu"
 
 #: ../commentluv-manager.php:43
 msgid "Text displayed in the select box"
-msgstr ""
+msgstr "Tekst wyświetlany w oknie wyboru"
 
 #: ../commentluv-manager.php:47
 msgid "CommentLuv on by default?"
-msgstr ""
+msgstr "Czy CommentLuv ma być domyślnie włączony?"
 
 #: ../commentluv-manager.php:50
 msgid "Show heart on links?"
-msgstr ""
+msgstr "Czy wyświetlić grafikę serca w linkach?"
 
 #: ../commentluv-manager.php:52
 msgid "Info panel background color"
-msgstr ""
+msgstr "Kolor tła panelu informacyjnego"
 
 #: ../commentluv-manager.php:57
 msgid "Use template insert to show badge and checkbox?"
-msgstr ""
+msgstr "Czy użyć szablonu wstawiania, aby pokazać odznakę i pole wyboru?"
 
 #: ../commentluv-manager.php:58
 msgid "Do NOT check this unless you have manually inserted the code into your comments.php file "
-msgstr ""
+msgstr "Nie zaznaczaj tego, chyba że masz ręcznie wpisany kod do pliku comments.php"
 
 #: ../commentluv-manager.php:64
 msgid "Display Badge"
-msgstr ""
+msgstr "Ustawienia wyświetlania odznaki"
 
 #: ../commentluv-manager.php:68
 msgid "Many thanks to <a href=\"http://byteful.com\">Byteful Traveller</a> for creating these images."
-msgstr ""
+msgstr "Podziękowania dla <a href=\"http://byteful.com\">Byteful Traveller</a> za stworzenie grafik."
 
 #: ../commentluv-manager.php:72
 msgid "Choose badge to display"
-msgstr ""
+msgstr "Wybierz odznakę do wyświetlenia"
 
 #: ../commentluv-manager.php:77
 msgid "Show nothing"
-msgstr ""
+msgstr "Niczego nie wyświetlaj"
 
 #: ../commentluv-manager.php:80
 msgid "Show text"
-msgstr ""
+msgstr "Wyświetl tekst"
 
 #: ../commentluv-manager.php:80
 msgid "Prepend html before badge or text (optional)"
-msgstr ""
+msgstr "Poprzedź odznakę lub tekst dodatkowym komunikatem (opcjonalnie)"
 
 #: ../commentluv-manager.php:88
 msgid "Technical Settings"
-msgstr ""
+msgstr "Ustawienia techniczne"
 
 #: ../commentluv-manager.php:92
 msgid "In most cases you shouldn't need to change these settings unless you have a customized comment form"
-msgstr ""
+msgstr "W większości przypadków nie ma potrzeby zmiany tych ustawień, chyba że masz niestandardowy formularz komentarzy"
 
 #: ../commentluv-manager.php:93
 msgid "These are the name=\"\" values used in the HTML source for the fields on your comment form."
-msgstr ""
+msgstr "Są to wartości name=\"\" używane w kodzie HTML do obsługi pól w formularzu komentarza."
 
 #: ../commentluv-manager.php:99
 msgid "Authors Name field name"
-msgstr ""
+msgstr "Nazwa pola: Imię autora"
 
 #: ../commentluv-manager.php:103
 msgid "Email field name"
-msgstr ""
+msgstr "Nazwa pola: E-mail"
 
 #: ../commentluv-manager.php:107
 msgid "Authors URL field name"
-msgstr ""
+msgstr "Nazwa pola: Strona autora"
 
 #: ../commentluv-manager.php:111
 msgid "Comment Text Area name"
-msgstr ""
+msgstr "Nazwa pola: Tytuł komentarza"
 
 #: ../commentluv-manager.php:124
 msgid "Reset to Default Settings"
-msgstr ""
+msgstr "Przywróć domyślne ustawienia"
 
 #: ../commentluv-manager.php:129
 msgid "Are you sure you want to reset your settings? Press OK to continue"
-msgstr ""
+msgstr "Czy na pewno chcesz zresetować ustawienia? Wybierz OK aby kontynuować"
 
 #: ../commentluv-manager.php:139
 msgid "Plugin Info"
-msgstr ""
+msgstr "Informacje o wtyczce"
 
 #: ../commentluv-manager.php:142
 msgid "Author"
-msgstr ""
+msgstr "Autor"
 
 #: ../commentluv-manager.php:143
 msgid "Home Page"
-msgstr ""
+msgstr "Strona domowa"
 
 #: ../commentluv-manager.php:143
 msgid "Visit ComLuv to register your site for more luv!"
-msgstr ""
+msgstr "Odwiedź ComLuv, aby zarejestrować swoją stronę i rozszerzyć funkcjonalność CommentLuv!"
 
 #: ../commentluv-manager.php:144
 msgid "Social"
-msgstr ""
+msgstr "Społeczności"
 
 #: ../commentluv-manager.php:145
 msgid "Help"
-msgstr ""
+msgstr "Pomoc"
 
 #: ../commentluv-manager.php:145
 msgid "Help Desk"
-msgstr ""
+msgstr "Help Desk"
 
 #: ../commentluv-manager.php:146
 msgid "News"
-msgstr ""
+msgstr "Aktualności"
 
 #: ../commentluv-manager.php:152
 msgid "Thanks to the following for translations"
-msgstr ""
+msgstr "Podziękowania dla następujących osób za wykonanie tłumaczeń"
 
 #: ../commentluv-manager.php:153
 msgid "Italian"
-msgstr ""
+msgstr "Włoski"
 
 #: ../commentluv-manager.php:154
 msgid "Russian"
-msgstr ""
+msgstr "Rosyjski"
 
 #: ../commentluv-manager.php:155
 msgid "Chinese"
-msgstr ""
+msgstr "Chiński"
 
 #: ../commentluv-manager.php:156
 msgid "Hebrew"
-msgstr ""
+msgstr "Hebrajski"
 
 #: ../commentluv-manager.php:157
 msgid "French"
-msgstr ""
+msgstr "Francuski"
 
 #: ../commentluv-manager.php:158
 msgid "Dutch"
-msgstr ""
+msgstr "Holenderski"
 
 #: ../commentluv-manager.php:159
 msgid "Polish"
-msgstr ""
+msgstr "Polski"
 
 #: ../commentluv.php:35
 msgid "CommentLuv requires Wordpress 2.9.2 or newer."
-msgstr ""
+msgstr "CommentLuv wymaga Wordpress w wersji 2.9.2 lub nowszej"
 
 #: ../commentluv.php:35
 msgid "Please Update!"
-msgstr ""
+msgstr "Zaktualizuj!"
 
 #: ../commentluv.php:88
 msgid "Settings"
-msgstr ""
+msgstr "Ustawienia"
 
 #: ../commentluv.php:218
 msgid "There were errors with your chosen settings"
-msgstr ""
+msgstr "Pojawiły się błędy z wybranymi ustawieniami"
 
